---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 01.04.2023
  Features:
    - Added Laser Cannon to the already existing stage 3
    - Added Lab as ingridient to astrometrics lab
    - Added startup option to split combinator signal output. If enabled:
      - Exisiting combinator will output the required item for the current stage only
      - New combinator will output the current stage as special signal S only
    - Added a popup window after the first completion to give a hint about the auto-continue and disable popup option
    - Added more strings to translation config file
    - Added player option to display days or hours in the log
    - Added new item group for spacex items
  Changes:
    - Changed research cost to gradually increase
    - Replaced rocket fuel with nuclear reactor for the fuel cell
    - Changed GUI to only display the required items for the current stage
    - Changed GUI to display the stage number
    - Various GUI overhauls to look more aesthetic
      - Main GUI
      - Log GUI
    - Slightly changed color of combinator graphics
    - Changed launch profile startup settings to launch multiplier and added a few more multipliers
  Bugfixes:
    - Fixed a bug that caused the GUI button to not be added when a mod change occures
    - Fixed the "/resetSpaceX" command to properly reset the launch progress
    - Fixed Bob Mods compatibility when robo ports are disabled. Will use personal roboport instead
    - Fixed closing Log window as well as main window when SpaceX button is pressed
    - Fixed correct days/hours in Log
    - Fixed technology unlock requirements
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Changes:
    - Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.