@@ -1,33 +1,40 @@
 space-toggle-button-caption=SpaceX
 space-progress-frame-title=Space Progress Summary
 progress-title=Progress
-stage-1-progress-stage=Stage 1 of 3
+stage-1-progress-stage=Stage 1 of __1__
 stage-1-progress-title=Satellite Network
-stage-1-completion-msg=Satellite network established now build the space drydock facility
+stage-1-completion-msg=Satellite network established. Now build the space drydock facility.
 stage-1-completion-title=Satellite Network Complete
 stage-1-completion-text=Finally after multiple launches of satellites you come to the realisation of what the final solution will look like: Complete eradication of the natives and time to build your own ride out of here!
 stage-1-completion-caption=Great!
 stage-1-completion-tooltip=Closes this dialog box
-stage-2-progress-stage=Stage 2 of 3
+stage-2-progress-stage=Stage 2 of __1__
 stage-2-progress-title=Drydock Construction
-stage-2-completion-msg=Drydock facilities now operational.  Work can begin on the spaceship!
+stage-2-completion-msg=Drydock facilities now operational. Work can begin on the spaceship!
 stage-2-completion-title=Drydock Completed
-stage-2-completion-text=Congratulations [Pat yourself on the back] Drydock done! We just need to build the ship, its starting to feel like the base that builds the base.
+stage-2-completion-text=Congratulations [Pat yourself on the back] Drydock done! Now we need to build the ship, it's starting to feel like the base that builds the base.
 stage-2-completion-caption=Awesome!
 stage-2-completion-tooltip=Closes this dialog box
-stage-3-progress-stage=Stage 3 of 3
+stage-3-progress-stage=Stage 3 of __1__
 stage-3-progress-title=Spaceship Construction
+stage-3-completion-msg=Spaceship construction completed. Prepare your journey!
+stage-3-completion-title=Spaceship Completed
+stage-3-completion-text=Congratulations! The spaceship construction is finished. Now you can begin to plan your journey. Gather enough provisions and plan your route to the next inhabited planet. To do so we need a proper space map first.
+stage-3-completion-caption=Let's go!
+stage-3-completion-tooltip=Closes this dialog box
+stage-4-progress-stage=Stage 4 of __1__
+stage-4-progress-title=Journey Preparation
 spacex-completion-msg=SpaceX completed!
-spacex-launch-title=Interstellar Spaceship Launched!
-spacex-completion-text=Congratulations.  After multiple months and multiple launches you have finally completed your final goal, building the rocket that will get you off this rock! Because, clearly, no one else was coming to rescue you!  
-spacex-completion-text1=You didn't crash the ship in the first place, right? That was Bob your trusty construction robot. He was the one flying the last ship. Him and his trusty AI that you programed. It was his fault! 
-spacex-completion-text2=Well he didn't make it through the first crash, so now it is completely up to you. You were paying attention during your training of "How to fly a large tin can" right? 
+spacex-launch-title=Interstellar Spaceship Departed!
+spacex-completion-text=Congratulations. After multiple months and multiple launches you have finally completed your final goal: Building and preparing the spaceship that will get you off this rock! Because, clearly, no one else was coming to rescue you!  
+spacex-completion-text1=You didn't crash the ship in the first place, right? That was Bob your trusty construction robot. He was the one flying the last ship. It was his fault! Well he didn't make it through the first crash anyway.
+spacex-completion-text2=Now it is up to you and your capable new and shiny AI robot companions. The spaceship is ready to go, polished and stocked to the brim with provisions. The route to the next inhabited planet is calculated and set. What could go wrong? Nothing!
 spacex-completion-text3=Good luck Engineer!
 spacex-completion-text4=Decision time - launch another interstellar rocket or end the game?
 spacex-continue-caption=Yes, Bring it On!
 spacex-continue-tooltip=This option will update the SpaceX counter and reset all the SpaceX production components to zero, so that you can continue your game!
 spacex-finish-caption=No, End the Game!
-spacex-finish-tooltip=This option will bring up the game completion screen.  SpaceX production will not be reset.
+spacex-finish-tooltip=This option will bring up the game completion screen. SpaceX production will not be reset.
 spacex-log-caption=Log
 spacex-log-tooltip=Show the log of launch times
 gui-log-title=SpaceX Launches
@@ -142,7 +149,7 @@ space-water-tank=A large water tank. Contains enough water for a decent trip in 
 space-oxygen-tank=A large oxygen tank. Contains enough oxygen for a decent trip in space. Keep breathing! [Place in rocket silo to launch into space]
 space-fuel-tank=A large fuel tank. Contains enough fuel for a decent trip in space. Might be enough to do some sightseeing too! [Place in rocket silo to launch into space]
 space-oxygen-barrel=A barrel filled with oxygen.
-space-map=The space map contains all the data you need to plot your course to your destination. [Place in rocket silo to launch into space]
+space-map=The space map contains all the data you need to plot your route to your destination. [Place in rocket silo to launch into space]
 
 [SpaceX-Progress]
 satellite=Satellites launched
